several small changes: move strings to translatable source, remove unnecessary boolean changes and made public variables private for security reasons (suggested by eclipse)